ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloth-service
            port:
              number: 80
      - path: /student
        pathType: Prefix
        backend:
          service:
            name: mobile-service
            port:
              number: 8080
